# sql-crash-course

./: README.md
sql-crash-course-dataset/: README.md  pyproject.toml
sql-crash-course-dataset/dataset/: orders.parquet  products.parquet  users.parquet
sql-crash-course-dataset/scripts/: generate_data.sh
sql-crash-course-dataset/sql_crash_course_dataset/: __init__.py  __main__.py  _cli.py  _copy.py  _defs.py
